--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
     --icon-hover-color:#2196F3;
     --icon-bg-color:rgba(255, 255, 255, 0.1);
     --bg-modal-color:rgba(0, 0, 0, 0.2);
+    --field-outline:rgba(33, 33, 33, 0.2);
 }
 ul{
     padding: 0;
@@ -547,6 +548,37 @@ color: var(--white-bg-color);
     display: flex;
     align-items: baseline;
 }
+.footer-feedback{
+margin-left: 93px;
+}
+/* .footer-form{
+    margin-left: 93px;
+} */
+.footer-form input{
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    background-color: var(--footer-bg-color);
+}
+.submit-footer{
+    min-width: 200px;
+    min-height: 50px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    background-color: var(--accent-color);
+    color: var(--white-bg-color);
+    font-weight: 700;
+font-size: 16px;
+line-height: 1.8;
+}
+.icon-send{
+    fill: currentColor;
+    margin-left: 10px;
+    color: var(--white-bg-color);
+}
 /* button */
 .button{
     color: var(--title-text-color);
@@ -697,15 +729,13 @@ color: var(--primary-text-color);
     min-height: 100%;
 
     background-color: var(--bg-modal-color);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 1;
 }
 .backdrop.is-hidden{
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     pointer-events: none;
-}
-.backdrop{
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    opacity: 1;
 }
 .modal{
     position: absolute;
@@ -742,11 +772,156 @@ color: var(--primary-text-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     
 }
+textarea{
+    resize: none;
+}
+.feedback{
+    font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+text-align: center;
+padding-top: 40px;
+padding-bottom: 12px;
+}
+.form{
+font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.01em;
+    width: 448px;
+    height: 342px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.form-field{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+.form-field label{
+    color: var(--primary-text-color);
+    margin-bottom: 4px;
+}
+.form-field input{
+    width: 448px;
+    height: 40px;
+    border: 1px solid var(--field-outline);
+    border-radius: 4px;
+    margin: 0;
+    padding: 0;
+}
+.policy{
+    display: flex;
+    text-align: center;
+font-size: 14px;
+line-height: 1.71;
+color:var(--primary-text-color)
+}
+.policy-span{
+    color: var(--accent-color);
+}
+.form-field .comment{
+    width: 448px;
+    height: 120px;
+    border: 1px solid var(--field-outline);
+border-radius: 4px;
+padding: 12px 16px;
+color:var(--black-color);
+}
+.comment ::placeholder{
+    color:rgba(117, 117, 117, 0.5);
+}
+.modal-submit{
+    display: block;
+    margin-top: 30px;
+   margin-left: auto;
+   margin-right: auto;
+    font-weight: 700;
+font-size: 16px;
+line-height: 1.8;
+color: #FFFFFF;
+    border-radius:4px;
+    border: 1px solid transparent;
+    min-width: 200px;
+    min-height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    padding: 10px 52px;
+    margin-bottom: 40px;
+    background-color: var(--accent-color);
+}
+.form-field {
+    position: relative;
+}
+.form-field .form-input{
+    padding: 12px 42px;
+}
+.form-field:focus{
+    border-color: var(--accent-color);
+}
+.form-input:focus ~ .current-icon{
+color: var(--accent-color);
+}
+.icon-name{
+    position: absolute;
+    top: 50%;
+    left: 12px;
 
+    display: inline-block;
+    width: 18px;
+    height: 18px;
 
+    fill: currentColor;
+}
+.icon-modal-tel{
+    position: absolute;
+    top: 50%;
+    left: 12px;
 
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    fill: currentColor;
+}
+.icon-modal-mail{
+    position: absolute;
+    top: 50%;
+    left: 12px;
 
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    fill: currentColor;
+}
+/* Policy */
+.label-policy{
+    display: flex;
+    align-items: center;
+}
+.checkbox{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.icon-check{
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+
+    outline: 2px solid var(--black-color);
+    border-radius: 2px;
+
+    margin-right: 7px;
+}
+.checkbox-svg{
+    display: flex;
+}
+.checkbox:checked + .icon-check{
+    outline-color: var(--accent-color);
+    background-color: var(--accent-color);
+    background-size: cover;
+    background-origin: border-box;
+}
 
 
 /* КУБИК */
 /* 250ms cubic-bezier(0.4, 0, 0.2, 1) */
+/* 
